environments/dev/apps/app-simple-app/services/simple-app/base/config/200-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app.kubernetes.io/name: simple-app
    app.kubernetes.io/part-of: app-simple-app
  name: simple-app
  namespace: dev
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/name: simple-app
    app.kubernetes.io/part-of: app-simple-app
status:
  loadBalancer: {}
