environments/dev/apps/app-simple-app/services/simple-app/base/config/300-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  name: simple-app
  namespace: dev
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: simple-app
    weight: 100
  wildcardPolicy: None
